# spidev_lib_cpp

./: CMakeLists.txt  README.md
src/: spidev.cpp  spidev.hpp
